contct page fix

--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ h6,
 }
 
 @media (max-width: 991.98px) {
-    .navbar .navbar-nav .nav-link  {
+    .navbar .navbar-nav .nav-link {
         margin-right: 0;
         padding: 10px 0;
     }
@@ -219,7 +219,7 @@ h6,
         position: relative;
         min-height: 450px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -505,7 +505,7 @@ h6,
 }
 
 .project-item:hover .project-title,
-.project-carousel .owl-item.center .project-title  {
+.project-carousel .owl-item.center .project-title {
     bottom: -60px;
 }
 
@@ -597,6 +597,7 @@ h6,
 }
 
 @media (min-width: 768px) {
+
     .testimonial-carousel::before,
     .testimonial-carousel::after {
         width: 200px;
@@ -604,6 +605,7 @@ h6,
 }
 
 @media (min-width: 992px) {
+
     .testimonial-carousel::before,
     .testimonial-carousel::after {
         width: 300px;
@@ -699,9 +701,15 @@ h6,
     color: #000000;
     border-top: 1px solid rgba(255, 255, 255, .1);
 }
-.text-justify{
+
+.text-justify {
     text-align: justify;
 }
-.backgroundOrange{
+
+.backgroundOrange {
     background-color: #ef6510;
+}
+
+.textOrange {
+    color: #EA7000;
 }
